# DWG-Automation-test

./: .gitignore  PROJECT_STATUS_REPORT.md  README.md  pyproject.toml
config/: equipment-keywords.example.json  project.example.json  project.json
data/overlay/: drawing-overlay-drawings.csv  drawing-overlay-drawings.json  drawing-overlay-groups.csv  drawing-overlay-groups.json  drawing-overlay-report.json  xr-plan-identity-review-list.csv
data/overlay/v2/: manual-placement-template.csv  xr-plan-identity-raw-list.csv  xr-plan-raw-collection-report.json  xr-plan-raw-manifest.csv  (+3 more)
data/출력/: A-101~109 전체평면도.dxf  E-G03_전력간선설비 평면도(HV).dxf  E-H03_전력간선설비 평면도(LV).dxf  E-I03_전력간선설비 평면도(UPS).dxf  XR-Sheet.dxf  XR-장비 배치도.dxf
docs/: architecture.md  coordinate-basis.md  current-progress.md  data-model.md  drawing-overlay-plan.md  drawing-parse.md  drive-sync.md  final-export.md  location-review.md  mvp-plan.md  provisional-calibration.md  v2-overlay-workflow.md  xref-analysis.md
src/drawing_mapper/: __init__.py  cli.py  config.py  conversion.py  coordinate_basis.py  coordinate_calibration.py  drive.py  equipment.py  filename_cleanup.py  final_export.py  geocoding.py  inventory.py  models.py  overlay.py  overlay_entities.py  provisional_calibration.py  review.py  xref.py
tools/: update_v2_outputs.py
v2/: architecture-locations-xr-plan-final-deduped.csv  facility-locations-xr-plan-final-deduped.csv  facility-locations-xr-plan-import.csv  facility-locations-xr-plan-review.html
v3/: facility-locations-xr-plan-import.csv  facility-locations-xr-plan-review.html
(+149 files in other folders)
