[project]
name = "drawing-facility-mapper"
version = "0.1.0"
description = "Sync drawings from Google Drive, parse floor plans, and map facility coordinates."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0"
]

[project.scripts]
drawing-mapper = "drawing_mapper.cli:main"

[project.optional-dependencies]
parser = [
  "PyMuPDF>=1.24.0",
  "lxml>=5.2.0",
  "svgpathtools>=1.6.0",
  "ezdxf>=1.3.0"
]
google = [
  "google-api-python-client>=2.140.0",
  "google-auth>=2.32.0",
  "google-auth-oauthlib>=1.2.0"
]
geo = [
  "httpx>=0.27.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"
